<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/segoeui"
                tools:text="Home"
                android:text="@string/tv_home"
                android:textColor="@color/tv_menu_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/segoeui"
                android:text="@string/tv_profile"
                android:textColor="@color/tv_menu_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/segoeui"
                android:text="@string/tv_cart"
                android:textColor="@color/tv_menu_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/segoeui"
                android:text="@string/tv_favorite"
                android:textColor="@color/tv_menu_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_my_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/segoeui"
                android:text="@string/tv_my_orders"
                android:textColor="@color/tv_menu_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/segoeui"
                android:text="@string/tv_language"
                android:textColor="@color/tv_menu_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/segoeui"
                android:text="@string/tv_settings"
                android:textColor="@color/tv_menu_title"
                android:textSize="24sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="37dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>