<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.glory.mvvmexample.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/bt_back_from_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_bt_back" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/tv_login"
            android:textColor="@color/text_dark_grey"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_back_from_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.username}"
                android:textColor="@color/text_dark_grey"
                android:hint="Username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/text_grey"
            app:layout_constraintEnd_toEndOf="@+id/til_email"
            app:layout_constraintStart_toStartOf="@+id/til_email"
            app:layout_constraintTop_toBottomOf="@+id/til_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:text="@={viewmodel.password}"
                android:textColor="@color/text_dark_grey"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/bt_login"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/gradient_background"
            android:text="@string/bt_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:onClick="@{() -> viewmodel.onClickLogin()}"
            app:layout_constraintEnd_toEndOf="@+id/til_password"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/til_password"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tv_dont_have_account"
            android:textColor="@color/text_grey"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/bt_login"
            app:layout_constraintStart_toStartOf="@+id/bt_login"
            app:layout_constraintTop_toBottomOf="@+id/bt_login" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>