<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bt_back_from_signup"
            android:layout_width="21dp"
            android:layout_height="12dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_bt_back" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tv_signup"
            android:textColor="@color/text_dark_grey"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/bt_back_from_signup"
            app:layout_constraintTop_toBottomOf="@+id/bt_back_from_signup" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/text_dark_grey"
                android:hint="Name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="@id/til_name"
            app:layout_constraintStart_toStartOf="@id/til_name"
            app:layout_constraintTop_toBottomOf="@id/til_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_dark_grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            app:passwordToggleEnabled="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="@id/til_email"
            app:layout_constraintStart_toStartOf="@id/til_email"
            app:layout_constraintTop_toBottomOf="@id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/text_dark_grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_signup"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/gradient_background"
            android:text="@string/bt_signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="@+id/til_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/til_password"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <TextView
            android:id="@+id/tv_already_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/tv_already_account"
            android:textColor="@color/text_grey"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/bt_signup"
            app:layout_constraintStart_toStartOf="@+id/bt_signup"
            app:layout_constraintTop_toBottomOf="@+id/bt_signup" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>