<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_btn_back" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fl_notifi"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_notifications_24" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_red_dot"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_oval" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/segoe_bold"
                    android:gravity="center"
                    android:text="99"
                    android:textColor="@color/white"
                    android:textSize="7sp" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_payment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="22dp"
            android:text="@string/tv_payment"
            android:textSize="30sp"
            android:fontFamily="@font/segoeui"
            android:textColor="@color/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_back"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="39dp"
            app:layout_constraintBottom_toTopOf="@id/bt_add_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_payment_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_credit_card_payment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_credit_card_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="45dp"
                    android:fontFamily="@font/segoeui"
                    android:text="@string/tv_subtotal"
                    android:textColor="@color/tv_brand_grey"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_credit_card_list" />

                <TextView
                    android:id="@+id/tv_number_subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/segoeui"
                    android:text="$ 160.00"
                    android:textColor="@color/tv_title"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_subtotal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_subtotal" />

                <TextView
                    android:id="@+id/tv_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/segoeui"
                    android:text="@string/tv_discount"
                    android:textColor="@color/tv_brand_grey"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subtotal" />

                <TextView
                    android:id="@+id/tv_number_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/segoeui"
                    android:text="5 %"
                    android:textColor="@color/tv_title"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_discount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_discount" />

                <TextView
                    android:id="@+id/tv_shipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/segoeui"
                    android:text="@string/tv_shipping"
                    android:textColor="@color/tv_brand_grey"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_discount" />

                <TextView
                    android:id="@+id/tv_number_shipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/segoeui"
                    android:text="$ 10.00"
                    android:textColor="@color/tv_title"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_shipping"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_shipping" />

                <TextView
                    android:id="@+id/tv_divide_line"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="#000"
                    android:gravity="center_horizontal"
                    android:paddingTop="5dip"
                    android:textColor="@color/text_grey"
                    app:layout_constraintTop_toBottomOf="@+id/tv_shipping" />

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/segoeui"
                    android:text="@string/tv_total"
                    android:textColor="@color/tv_total_grey"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_divide_line" />

                <TextView
                    android:id="@+id/tv_number_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/segoeui"
                    android:text="$ 162.00"
                    android:textColor="@color/tv_title"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_total"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_total" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>



        <TextView
            android:id="@+id/bt_add_card"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:background="@drawable/dash_border"
            android:fontFamily="@font/segoeui"
            android:text="Add Card"
            android:textAllCaps="false"
            android:textColor="@color/blue_light"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/bt_checkout" />

        <Button
            android:id="@+id/bt_checkout"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="17dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:background="@drawable/gradient_background"
            android:fontFamily="@font/segoe_semibold"
            android:text="@string/bt_checkout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>